# py-excel-solver

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  tox.ini
excelsolver/: solver.py
solver/: solver.py
tests/: solver_test.py
