[project]
readme = "README.md"
license = { file = "LICENSE" }


[tool.poetry]
name = "excelsolver"
version = "0.1.0"
description = ""
authors = ["Ryan Young <dev@ryayoung.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "^1.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
ruff = "^0.0.259"
mypy = "^1.1.1"
isort = "^5.12.0"
pytest-randomly = "^3.12.0"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
ruff = "^0.0.259"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
ignore_missing_imports = true # scipy.optimize seems to be missing typedefs

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pytest.ini_options]
pythonpath = [
  "."
]
filterwarnings = "ignore::pytest.PytestConfigWarning" # Seems to be something with the V7 of pytest
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"

classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.10",
	"Environment :: Console",
	"Operating System :: OS Independent",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering",
]

keywords = [
	"",
]


[project.urls]
# "Homepage" = "https://excel_solver.com"
"Documentation" = "https://github.com/ryayoung/py-excel-solver"
"Source Code" = "https://github.com/ryayoung/py-excel-solver"
